name:                ghc-dump-util
version:             0.1.0.0
synopsis:            Handy tools for working with @ghc-dump@ dumps.
description:
  @ghc-dump@ is a library, GHC plugin, and set of tools for recording and
  analysing GHC's Core representation. The plugin is compatible with GHC 7.10
  through 8.3, exporting a consistent (albeit somewhat lossy) representation
  across these versions. The AST is encoded as CBOR, which is small and easy to
  deserialise.
  .
  This package provides the AST and compiler plugin. See the @ghc-dump-util@
  package for a useful command-line tool for working with dumps produced by this
  plugin.
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@well-typed.com
copyright:           (c) 2017 Ben Gamari
category:            Development
build-type:          Simple
tested-with:         GHC==7.10.3, GHC==8.0.2, GHC==8.2.2
cabal-version:       >=1.10

library
  exposed-modules:     GhcDump.Repl, GhcDump.Util, GhcDump.Pretty, GhcDump.Reconstruct
  hs-source-dirs:      src
  build-depends:       base < 5.0,
                       ghc-dump-core,
                       bytestring,
                       unordered-containers,
                       hashable,
                       text,
                       ansi-wl-pprint,
                       binary
  default-language:    Haskell2010

executable ghc-dump
  main-is:             Main.hs
  build-depends:       base < 5.0,
                       ghc-dump-core,
                       ghc-dump-util,
                       ansi-wl-pprint,
                       regex-tdfa,
                       regex-tdfa-text,
                       optparse-applicative
  default-language:    Haskell2010
